提交第三章翻译；将 Listing 的翻译从“列表”改为“清单”

--- a/ch02.md
+++ b/ch02.md
@@ -14,7 +14,7 @@
 
 ## 2.2  了解 FreeRTOS 的发行
 
-### 2.2.1 定义：FreeRTOS 移植
+### 2.2.1 定义: FreeRTOS 移植
 
 FreeRTOS 可以通过大约20种不同的编译器构建，并且可以运行在超过40种不同的处理器架构上，每种编译器和处理器的组合称为一种 FreeRTOS 移植。
 
@@ -240,13 +240,13 @@ FreeRTOS
 
 1. 打开提供的示例项目，并确保它可以按照预期构建和执行。
 2. 去掉位于 Demo/Common 目录下，用来实现实例任务的源文件。
-3. 删掉`main()`函数中调用除了`prvSetupHardware()`和`vTaskStartScheduler()`之外的所有函数，如列表 2.1 所示。
+3. 删掉`main()`函数中调用除了`prvSetupHardware()`和`vTaskStartScheduler()`之外的所有函数，如清单 2.1 所示。
 4. 检查项目依旧可以编译通过。
 
 当您按照这些步骤执行完，您就创建了一个包含正确 FreeRTOS 源文件，但是没有定义任何功能的项目。
 
 
-<a name="list2.1" title="列表 2.1 main() 函数的模板"></a>
+<a name="list2.1" title="清单 2.1 main() 函数的模板"></a>
 
 
 ```c
@@ -266,7 +266,7 @@ int main( void )
     return 0;
 }
 ```
-***列表 2.1*** *main() 函数的模板*
+***清单 2.1*** *main() 函数的模板*
 
 
 
